# llmctl

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  rustfmt.toml
.github/workflows/: release.yml
docs/: architecture.md  decisions.md  release-notes-v0.2.0.md  release-notes-v0.2.1.md  release-notes-v0.3.0.md  release-notes-v0.3.1.md  requirements.md  roadmap.md
src/: main.rs
src/app/: hub.rs  mod.rs
src/config/: mod.rs
src/discovery/: catalog.rs  gguf.rs  hf.rs  mod.rs  models.rs  online.rs  runtimes.rs
src/domain/: mod.rs
src/hub/: api.rs  download.rs  mod.rs
src/profiles/: mod.rs  registry.rs  store.rs  templates.rs
src/session/: command.rs  health.rs  mod.rs  proc.rs  record.rs  supervisor.rs
src/ui/: mod.rs
