[package]
name = "llmctl"
version = "0.2.1"
edition = "2024"
description = "Keyboard-driven TUI for managing local llama.cpp servers"
license = "MIT"
repository = "https://github.com/zeddius1983/llmctl"

# Lets `cargo binstall llmctl` fetch the prebuilt binaries from the GitHub
# Release instead of compiling. URL matches the archive name produced by the
# release workflow (.github/workflows/release.yml).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.{ archive-format }"
pkg-fmt = "tgz"

# Slim down the binaries we distribute.
[profile.release]
strip = true

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
directories = "5"
walkdir = "2"
regex = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
ureq = { version = "2.12", features = ["json"] }
